Fix UI issues and add shimmer loading effects
- Fix RenderFlex overflow in notifications screen tabs
- Add shimmer loading effects for favorite artisans, saved locations, and notifications
- Fix navigation issues in drawer menu
- Add settings page and contact support functionality
- Fix Google Places API integration and saved locations functionality
- Update API keys and fix backend service calls
- Add map test page for debugging
- Improve error handling and user experience

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,5 +51,9 @@
 	<string>This app needs access to location to show nearby services and artisans on the map.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>This app needs access to location to show nearby services and artisans on the map.</string>
+	
+	<!-- Google Maps API Key -->
+	<key>GOOGLE_MAPS_API_KEY</key>
+	<string>AIzaSyAIY1NjFtDZiHfsNcWT-viJQotsyh01I5E</string>
 </dict>
 </plist>
