--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
-  equatable: ^2.0.7
-  get_it: ^8.2.0
-  injectable: ^2.5.1
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
   json_annotation: ^4.9.0
   dio: ^5.9.0
   shared_preferences: ^2.5.3
@@ -66,9 +64,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  build_runner: ^2.7.0
-  injectable_generator: ^2.8.1
-  json_serializable: ^6.10.0
+  build_runner: ^2.5.4
+  riverpod_generator: ^2.6.1
+  json_serializable: ^6.9.0
   mockito: ^5.4.4
   mocktail: ^1.0.4
 
